# bioscript

./: .gitignore  pyproject.toml  run.py  temp.py
configs/: DEFAULT.yaml  DEFAULT_config.yaml  alfred_0.2.6_bam_qc.yaml  bbmap_bbsplit_39.81_index_and_split.yaml  bcftools_pileupcall_allsites.yaml  bedtools_2.27.1_bamtobed.yaml  bedtools_bedGraphToBigWig.yaml  bwa_0.7.17_pe_align_only.yaml  bwa_0.7.17_pe_merge.yaml  bwa_0.7.17_pe_merge_wes.yaml  copykit_cbNIPT_analysis.yaml  cutadapt_remove_nextra_transpose_adapter.yaml  fastp_0.23.4_PicoplexGold_singularity_pe_trim.yaml  fastp_0.23.4_singularity_pe_trim.yaml  fastq_screen_using_singularity.yaml  fastqc_0.12.1_singularity_pe_qc_extract.yaml  gatk_3.8_singularity_indel_realign.yaml  gatk_3.8_singularity_wes_indel_realign.yaml  gatk_4.4.0.0_haplotype_caller.yaml  gatk_4.4.0.0_singularity_bqsr.yaml  gatk_4.4.0.0_singularity_collect_alignment_summary.yaml  gatk_4.4.0.0_singularity_hs_metrics.yaml  gatk_4.4.0.0_singularity_mark_duplicates.yaml  gatk_4.4.0.0_singularity_mutact2_contamination_estimation.yaml  gatk_4.4.0.0_singularity_mutact2_filter_mutect_calls.yaml  gatk_4.4.0.0_singularity_mutact2_learn_read_ori.yaml  gatk_4.4.0.0_singularity_mutact2_tumor_only.yaml  gatk_4.4.0.0_singularity_qc_artifacts.yaml  gatk_4.4.0.0_singularity_qc_insert_size.yaml  gatk_4.4.0.0_singularity_qc_wgs_metrics.yaml  ginko_cbNIPT.yaml  kraken2_kronaplot.yaml  manual_cbnipt_cnv_call.yaml  mosdepth_0.3.6_singularity_coverage_100kb.yaml  mosdepth_0.3.6_singularity_target_region.yaml  multiqc_using_singularity.yaml  picard_3.1.0_deduplicates.yaml  (+15 more)
(+665 files in other folders)
